--- a/html/css/custom.css
+++ b/html/css/custom.css
@@ -153,4 +153,118 @@ padding:1%;
 }
 
 
+ /* Rating styling */
+ #home .rating{
+
+display:inline-block;
+
+background:url(images/pagination.png) no-repeat 0 -182px;
+
+height:22px;
+
+text-indent:-999px;
+
+font-size:0px;
+
+}
+
+#home .one{
+
+width:30px;
+
+}
+
+#home .two{
+
+width:55px;
+
+}
+
+#home .three{
+
+width:75px;
+
+}
+
+#home .four{
+
+width:99px;
+
+}
+
+
+/* Rating Styling on the talk page */
+
+/** add the stars to the drop down */
+
+#rate_talk-menu a{
+
+padding-left:100px;
+
+position:relative;
+
+}
+
+#rate_talk-button span.ui-btn-text{
+
+background:url(images/pagination.png) no-repeat;
+
+}
+
+#rate_talk-button span.ui-btn-inner{
+
+padding-left:5px;
+
+}
+
+#rate_talk-menu li a:before{
+
+content: "  ";
+
+display:inline-block;
+
+width:115px;
+
+height:20px;
+
+background:url(images/pagination.png) no-repeat;
+
+position:absolute;
+
+left:0px;
+
+}
+
+.one #rate_talk-button span.ui-btn-text,
+
+#rate_talk-menu li a:before{
+
+background-position: -75px -182px;
+
+}
+
+.two #rate_talk-button span.ui-btn-text,
+
+#rate_talk-menu li + li a:before{
+
+background-position: -52px -182px;
+
+}
+
+.three #rate_talk-button span.ui-btn-text,
+
+#rate_talk-menu li + li +li a:before{
+
+background-position: -27px -182px;
+
+}
+
+.four #rate_talk-button span.ui-btn-text,
+
+#rate_talk-menu li + li +li +li a:before{
+
+background-position: -2px -182px;
+
+}
+
 
