Redid mobile application logic
Now it syncs properly across mobile clients and mosaic interface.
Cleans up with the tiledone signal.
If clicked on a submission title it calls a fake function (for now)
with the submission id that is meant to be the iOS bridge function.

--- a/html/mobile/css/custom.css
+++ b/html/mobile/css/custom.css
@@ -132,6 +132,10 @@ padding:1%;
 .green{
 	background: #B3DE69;
 }
+
+.dark_green{
+	background: #B3FF69;
+}
 /* Main page HOME styling */
 
 #branding{
