Added cues for how many  items are per row

--- a/html/mobile/css/custom.css
+++ b/html/mobile/css/custom.css
@@ -275,3 +275,43 @@ h3{
 	opacity: 1;
 }
 
+.circle {
+    width: 15px;
+    height: 15px;
+    -webkit-border-radius: 25px;
+    -moz-border-radius: 25px;
+    border-radius: 25px; 
+    background-color: rgba(166,166,166,.9);
+    border-color: :rgba(0,0,0,1);
+    border-width: 2px;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 20px;
+    z-index: -1;
+    display:inline;
+    position: absolute;
+    left:100px;
+    top: 20px;
+
+}
+
+.circle_selected {
+    width: 15px;
+    height: 15px;
+    -webkit-border-radius: 25px;
+    -moz-border-radius: 25px;
+    border-radius: 25px; 
+    background-color: rgba(233,233,233,.9);
+    border-color: :rgba(0,0,0,1);
+    border-width: 2px;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 20px;
+    z-index: -1;
+    display:inline;
+    position: absolute;
+    left:100px;
+    top: 20px;
+
+}
+
