Colors between mobile and mosaic now match

--- a/html/mobile/css/custom.css
+++ b/html/mobile/css/custom.css
@@ -133,8 +133,8 @@ padding:1%;
 	background: #B3DE69;
 }
 
-.dark_green{
-	background: #B3FF69;
+.violet{
+	background: #DF73B2;
 }
 /* Main page HOME styling */
 
