Fixed gui bug with breadcrumbs

--- a/html/mobile/css/custom.css
+++ b/html/mobile/css/custom.css
@@ -273,7 +273,10 @@ background-position: -2px -182px;
 
 h3{
 	opacity: 1;
+    white-space: nowrap;
+    overflow: auto;
 }
+
 
 .circle {
     width: 15px;
