Updated styling of tiles

--- a/html/mosaic/css/tile.css
+++ b/html/mosaic/css/tile.css
@@ -10,9 +10,9 @@ body {
     background: #1f1620;
 }
 
-#tileD { background: #8DD3C7; }
-#tileE { background: #FDB462; }
-#tileF { background: #BEBADA; }
-#tileG { background: #FB8072; }
-#tileH { background: #80B1D3; }
-#tileI { background: #B3DE69; }
+#tileD { background: #A6CEE3; }
+#tileE { background: #B2DF8A; }
+#tileF { background: #FB9A99; }
+#tileG { background: #FDBF6F; }
+#tileH { background: #8DD3C7; }
+#tileI { background: #CAB2D6; }
