--- a/html/mosaic/css/tiles/map.css
+++ b/html/mosaic/css/tiles/map.css
@@ -1,25 +1,25 @@
 html, body {
     /* Vertical Layout */
     display: block;
-    height: 1080px !important;
-    width: 384px;
-    /*overflow: auto;*/
-    border: 1px solid #fff;
+    height: 768px !important;
+    width: 540px;
+    overflow: hidden;
+    /*border: 1px solid #fff;*/
 }
 
 .room {
     display: block;
-    height: 72px;
+    height: 51px;
     position: relative;
 }
 
 .metro_stop {
     display: block;
     position: absolute;
-    top: 10px;
-    left: 10px;
-    width: 30px;
-    height: 30px;
+    top: 5px;
+    left: 5px;
+    width: 25px;
+    height: 25px;
     border-radius: 50%;
     opacity: 0.6;
 }
@@ -31,11 +31,11 @@ html, body {
 
 .label {
     position: absolute;
-    top: 45px;
-    left: 10px;
-    width: 30px;
+    top: 35px;
+    left: 5px;
+    width: 25px;
     text-align: center;
-    font-size: 14pt;
+    font-size: 10pt;
     opacity: 0.6;
 }
 
@@ -46,10 +46,10 @@ html, body {
 
 .timeline {
     position: absolute;
-    top: 12px;
-    left: 50px;
+    top: 5px;
+    left: 40px;
     display: block;
-    width: 330px;
+    width: 500px;
     height: 20px;
 }
 
