--- a/html/mosaic/css/vertical.css
+++ b/html/mosaic/css/vertical.css
@@ -1,8 +1,12 @@
-html, body {
-    width: 1080px !important;
-    height: 1920px !important;
-    border-collapse: collapse;
-    overflow: auto;
+#vertical {
+    display: block;
+    height: 1920px;
+    width: 1080px;
+    background: #1f1620;
+    margin: 0;
+    padding: 0;
+    position: relative;
+    overflow: none;
 }
 
 .tile {
