--- a/html/mobile/css/custom.css
+++ b/html/mobile/css/custom.css
@@ -162,22 +162,22 @@ span.ui-icon.ui-icon-minus.ui-icon-shadow{
 	
 }
 .light_blue{
-	background: #8DD3C7;
+	background: #A6CEE3;
 }
 .orange{
-	background: #FDB462;
+	background: #B2DF8A;
 }
 .purple{
-	background: #BEBADA;
+	background: #FB9A99;
 }
 .red{
-	background: #FB8072;
+	background: #FDBF6F;
 }
 .blue{
-	background: #80B1D3;
+	background: #8DD3C7;
 }
 .green{
-	background: #B3DE69;
+	background: #CAB2D6;
 }
 
 .violet{
