--- a/html/mosaic/css/tiles/map.css
+++ b/html/mosaic/css/tiles/map.css
@@ -49,7 +49,7 @@ html, body {
     top: 10px;
     left: 45px;
     display: block;
-    width: 500px;
+    width: 495px;
     height: 20px;
 }
 
@@ -74,6 +74,7 @@ html, body {
 }
 
 .selected { opacity: 1 !important; }
+.full   { width: 100%; }
 .long   { width: 25%; }
 .short  { width: 12.5%; }
 .altchi { width: 18.75%; }
