--- a/html/mosaic/css/tiles/session.css
+++ b/html/mosaic/css/tiles/session.css
@@ -1,7 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=PT+Sans:400,700);
 
 body { 
-    padding: 5px 10px; 
+    padding: 10px 10px 0 10px; 
     overflow: hidden;
     font-family: 'PT Sans', sans-serif;
 }
