--- a/html/lib/twitter.css
+++ b/html/lib/twitter.css
@@ -1,31 +1,48 @@
+@import url(http://fonts.googleapis.com/css?family=PT+Sans:400,700);
+
+body { margin-top: 5px; }
+
+h1 {
+    font-size: 16px;
+    margin: 0 0 5px 10px;
+    padding: 0;
+    letter-spacing: 1px;
+    color: #7a557f;
+}
+
 .tweet {
     display: block;
     float: left;
-    width: 310px;
-    height: 100px;
-    margin: 0 5px 10px 5px;
+    width: 235px;
+    height: 90px;
+    margin: 0 0 10px 10px;
     background: #352537;
     border-radius: 5px;
     padding: 10px;
-    margin-bottom: 15px;
-    color: #eee;
-    font-family: "Gill Sans";
-    font-size: 14px;
+    color: #ccc;
+    font-family: 'PT Sans', sans-serif;
+    font-size: 12px;
     font-weight: 300;
+    overflow: hidden;
 }
 
 .tweet .userpic {
     float: left;
-    margin: 0 15px 0 5px; 
+    margin: 0 10px 0 0; 
 }
-.tweet .userpic img { border-radius: 5px; }
-.tweet .byline { 
-    margin: 0 0 10px 70px; 
+.tweet .userpic img { 
+    border-radius: 5px; 
+    width: 32px;
+    height: 32px;
+}
+
+.tweet .byline {
+    margin: 0 0 10px 45px;
 }
 .tweet .byline .name { font-weight: bold; }
 .tweet .byline .username, .tweet .byline .date {
-    color: #aaa;
+    color: #888;
     font-size: 12px;
 }
 .tweet .byline .date { float: right; }
-.tweet .text { margin-left: 70px; }
+/*.tweet .text { margin-left: 45pxpx; }*/
