--- a/html/mosaic/css/tiles/session.css
+++ b/html/mosaic/css/tiles/session.css
@@ -26,6 +26,7 @@ h1 {
     width: 100%;
     height: 100%;
     overflow: hidden;
+    border-radius: 5px;
 }
 
 .submission .video {
@@ -36,6 +37,8 @@ h1 {
     margin: 0;
     padding: 0;
     float: left;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
     /*width: 100% !important;*/
 }
 
@@ -43,20 +46,24 @@ h1 {
     display: block;
     float: left;
     padding: 5px 10px; 
+    width: 100%;
     height: 20%;
-    width: 93%;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
 }
 
 h2 {
     margin: 0;
     font-size: 18px;
     line-height: 20px;
+    width: 93%;
 }
 
 h3 {
     margin: 0;
     font-weight: normal;
     font-size: 14px;
+    width: 93%;
 }
 
 h3.code {
@@ -69,25 +76,27 @@ h3.code {
     letter-spacing: 1px;
     text-transform: uppercase;
     color: #fff;
+    border-top-left-radius: 5px;
+    border-bottom-right-radius: 5px;
 }
 
 /* Colors */
 #tile_A h1 { color: #f1a16d;}
-#tile_A .submission { background: #f1a16d; }
+#tile_A .submission .info { background: #f1a16d; }
 #tile_A .code { background: #63412a; }
 
 #tile_B h1 { color: #B5E27D;}
-#tile_B .submission { background: #B5E27D; }
+#tile_B .submission .info { background: #B5E27D; }
 #tile_B .code { background: #4b6530; }
 
 #tile_C h1, #tile_D h1 { color: #AACDE5;}
-#tile_C .submission, #tile_D .submission { background: #AACDE5; }
+#tile_C .submission .info, #tile_D .submission .info { background: #AACDE5; }
 #tile_C .code, #tile_D .code { background: #1B5097; }
 
 #tile_E h1, #tile_F h1 { color: #F59A99;}
-#tile_E .submission, #tile_F .submission { background: #F59A99; }
+#tile_E .submission .info, #tile_F .submission .info { background: #F59A99; }
 #tile_E .code, #tile_F .code { background: #865252; }
 
 #tile_G h1, #tile_H h1 { color: #CAB2D9;}
-#tile_G .submission, #tile_H .submission { background: #CAB2D9; }
+#tile_G .submission .info, #tile_H .submission .info { background: #CAB2D9; }
 #tile_G .code, #tile_H .code { background: #5C5065; }
