--- a/html/mobile/css/mobile.css
+++ b/html/mobile/css/mobile.css
@@ -1,62 +1,45 @@
-*.ui-listview *.ui-btn-up-c,
-*.ui-listview *.ui-btn-down-c,
-*.ui-listview *.ui-btn-hover-c
-  {
-  /* Copy your .ui-btn-up styles here */
-/*  text-decoration: none;
-*/  }
-
-
   #screen_list li {
 	padding: 0.3em 15px;
 	display: block;
   }
-  h3{
-  	margin-bottom:20px;
-  	margin-top: 0px;
+  
+  .selected{
+    background-color: rgba(166,166,166,1);
   }
 
-  h4{
-	display:inline;
-  }
- 
-  #top{
-  	margin-bottom:20px;
-  	margin-top: 0px;
-  }
-  header{
-  	text-align: center;
+  .invisible{
+    visibility:hidden;
   }
 
-  #back{
-  	position:fixed;
-  	top:10px;
-  	left:10px;
-  	width:50px;
-  	height:25px;
-  	background-color: rgba(238, 238, 238,1);
-  	border-radius: 3px;
-  	z-index: 1000;
-  }
- 
-  #show{
- 	position:fixed;
-  	top:10px;
-  	right:10px;
-  	width:auto;
-  	height:25px;
-  	background-color: rgba(23, 206, 118,1);
-  	border-radius: 3px;
-  	visibility: hidden;
-  	z-index: 1000;
-
+#main_grid{
+  background-color: rgb(31, 22, 32);
+}
+#main_grid a{
+  text-decoration: none;
+}
+  .tile{
+    height: 100px;
+    font-size: .9em;
+    font-weight: 400;
+    border-radius: 4px;
+    margin: 4px;
+    width:48% !important;
+    padding: 5px 5px;
+    overflow:hidden;
   }
 
-  li h3 a{
-  	text-decoration: none;
+  .green{
+    background-color: #B5E27D;
   }
 
-  div[data-role="header"]{
-	position: fixed !important;
-	box-shadow: 0px 3px 5px #888;
+  .blue{
+    background-color: #AACDE5;
+  }
+
+  .red{
+    background-color: #F59A99;
+  }
+
+  .purple{
+    background-color: #CAB2D9;
   }
