--- a/html/mosaic/css/tiles/social.css
+++ b/html/mosaic/css/tiles/social.css
@@ -1,23 +1,22 @@
 @import url(http://fonts.googleapis.com/css?family=PT+Sans:400,700);
 
-body { margin-top: 5px; }
+#social {
+    margin-top: 10px;
+    padding: 5px 0 0 5px;
+    border-top: 5px solid #352537;
+}
 
-h1 {
-    font-size: 16px;
-    margin: 0 0 5px 10px;
-    padding: 0;
-    letter-spacing: 1px;
-    color: #7a557f;
+.item {
+    display: block;
+    float: left;
+    width: 255px;
+    margin: 5px;
+    border-radius: 5px;
 }
 
 .tweet {
-    display: block;
-    float: left;
-    width: 235px;
-    height: 90px;
-    margin: 0 0 10px 10px;
     background: #352537;
-    border-radius: 5px;
+    width: 235px;
     padding: 10px;
     color: #ccc;
     font-family: 'PT Sans', sans-serif;
